--- a/UI/Controls/Menu.xaml
+++ b/UI/Controls/Menu.xaml
@@ -115,15 +115,7 @@
                     <MenuItem.Icon>
                         <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="16" Text=""/>
                     </MenuItem.Icon>
-                    <MenuItem Name="ar" Header="عربي" />
-                    <MenuItem Name="en" Header="English" />
-                    <MenuItem Name="fr" Header="Français" />
-                    <MenuItem Name="tr" Header="Türkçe" />
-                    <MenuItem Name="zh" Header="中文" />
-                    <MenuItem Name="ko" Header="한국어" />
-                    <MenuItem Name="de" Header="Deutsch" />
-                    <MenuItem Name="ru" Header="Русский" />
-                    <MenuItem Name="es" Header="Español" />
+                       {{LocalesKeys}}
             </MenuItem>
 
 
