--- a/xaml/Controls/Taps.xaml
+++ b/xaml/Controls/Taps.xaml
@@ -4,8 +4,8 @@
                 <TabItem.HeaderTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="" FontFamily="Segoe MDL2 Assets" FontSize="18" Margin="0,0,5,0"/>
-                            <TextBlock Text="{Binding}"  FontSize="15"  Margin="0,0,5,0"/>
+                            <TextBlock Text="" FontFamily="Segoe MDL2 Assets" FontSize="18" Margin="0,0,2,0"/>
+                            <TextBlock Text="{Binding}"  FontSize="15" TextWrapping="Wrap"  Margin="0,0,2,0"/>
                         </StackPanel>
                     </DataTemplate>
             </TabItem.HeaderTemplate>
@@ -19,8 +19,8 @@
                 <TabItem.HeaderTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="" FontFamily="Segoe MDL2 Assets" FontSize="18" Margin="0,0,5,0"/>
-                                <TextBlock Text="{Binding}"  FontSize="15"  Margin="0,0,5,0"/>
+                                <TextBlock Text="" FontFamily="Segoe MDL2 Assets" FontSize="18" Margin="0,0,2,0"/>
+                                <TextBlock Text="{Binding}"  FontSize="15" TextWrapping="Wrap" Margin="0,0,2,0"/>
                             </StackPanel>
                         </DataTemplate>
                 </TabItem.HeaderTemplate>
@@ -32,8 +32,8 @@
                 <TabItem.HeaderTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="" FontFamily="Segoe MDL2 Assets" FontSize="18" Margin="0,0,5,0"/>
-                                <TextBlock Text="{Binding}"  FontSize="15" Margin="0,0,5,0"/>
+                                <TextBlock Text="" FontFamily="Segoe MDL2 Assets" FontSize="18" Margin="0,0,2,0"/>
+                                <TextBlock Text="{Binding}"  FontSize="15" TextWrapping="Wrap" Margin="0,0,2,0"/>
                             </StackPanel>
                         </DataTemplate>
                 </TabItem.HeaderTemplate>
