--- a/xaml/Controls/Search.xaml
+++ b/xaml/Controls/Search.xaml
@@ -6,5 +6,15 @@
             HorizontalAlignment="Left"
             Style="{StaticResource SearchBox}"
             Name="searchInput" />
+
+            <TextBlock x:Name="SearchIcon" Text="" 
+                FontSize="15" 
+                Foreground="Gray" 
+                VerticalAlignment="Center" 
+                FontFamily="Segoe MDL2 Assets"
+                Background="Transparent"
+                HorizontalAlignment="Left" 
+                Margin="9,0,0,0" />
+
 </Grid>
 <!--End Search-->
