--- a/xaml/Controls/Menu.xaml
+++ b/xaml/Controls/Menu.xaml
@@ -3,11 +3,7 @@
                                     
         <MenuItem Background="Transparent" BorderBrush="Transparent" BorderThickness="0" IsEnabled="False" ToolTip="Emad Adel">
             <MenuItem.Icon>
-                <Image Source="https://raw.githubusercontent.com/emadadel4/ITT/main/static/Images/logo.png" Width="70" Height="Auto" Margin="5,5,0,0">
-                    <Image.Effect>
-                        <DropShadowEffect Color="#FFFF0000" BlurRadius="30" ShadowDepth="0" Opacity="0.8"/>
-                    </Image.Effect>
-                </Image>
+                <Image Source="https://raw.githubusercontent.com/emadadel4/ITT/main/static/Images/logo.png" Width="70" Height="Auto" Margin="5,5,0,0"></Image>
             </MenuItem.Icon>
         </MenuItem>
 
