Added Tweaks Category selection.

--- a/xaml/Controls/Catagory.xaml
+++ b/xaml/Controls/Catagory.xaml
@@ -1,21 +1,51 @@
- <!--Catagory-->
-  <ComboBox SelectedIndex="0" Name="category" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" Width="auto">
-    <ComboBoxItem Content="{Binding all}"></ComboBoxItem>
-    <ComboBoxItem Content="Web Browsers"></ComboBoxItem>
-    <ComboBoxItem Content="Media"></ComboBoxItem>
-    <ComboBoxItem Content="Media Tools"></ComboBoxItem>
-    <ComboBoxItem Content="Documents"></ComboBoxItem>
-    <ComboBoxItem Content="Compression"></ComboBoxItem>
-    <ComboBoxItem Content="Communication"></ComboBoxItem>
-    <ComboBoxItem Content="File Sharing"></ComboBoxItem>
-    <ComboBoxItem Content="Imaging"></ComboBoxItem>
-    <ComboBoxItem Content="Gaming"></ComboBoxItem>
-    <ComboBoxItem Content="Utilities"></ComboBoxItem>
-    <ComboBoxItem Content="Disk Tools"></ComboBoxItem>
-    <ComboBoxItem Content="Development"></ComboBoxItem>
-    <ComboBoxItem Content="Security"></ComboBoxItem>
-    <ComboBoxItem Content="Portable"></ComboBoxItem>
-    <ComboBoxItem Content="Runtimes"></ComboBoxItem>
-    <ComboBoxItem Content="Drivers"></ComboBoxItem>
+<!--AppsCategory-->
+  <ComboBox 
+    SelectedIndex="0" 
+    Name="AppsCategory" 
+    Grid.Column="0" 
+    VerticalAlignment="Center" 
+    HorizontalAlignment="Center" 
+    Width="auto">
+
+      <ComboBoxItem Content="{Binding all}"/>
+      <ComboBoxItem Content="Web Browsers"/>
+      <ComboBoxItem Content="Media"/>
+      <ComboBoxItem Content="Media Tools"/>
+      <ComboBoxItem Content="Documents"/>
+      <ComboBoxItem Content="Compression"/>
+      <ComboBoxItem Content="Communication"/>
+      <ComboBoxItem Content="File Sharing"/>
+      <ComboBoxItem Content="Imaging"/>
+      <ComboBoxItem Content="Gaming"/>
+      <ComboBoxItem Content="Utilities"/>
+      <ComboBoxItem Content="Disk Tools"/>
+      <ComboBoxItem Content="Development"/>
+      <ComboBoxItem Content="Security"/>
+      <ComboBoxItem Content="Portable"/>
+      <ComboBoxItem Content="Runtimes"/>
+      <ComboBoxItem Content="Drivers"/>
+    </ComboBox>
+<!--End AppsCategory-->
+
+<!--TwaeksCategory-->
+  <ComboBox 
+
+      SelectedIndex="0" 
+      Name="TwaeksCategory" 
+      Grid.Column="0" 
+      VerticalAlignment="Center" 
+      HorizontalAlignment="Center" 
+      Visibility="Hidden"
+      Width="auto">
+
+      <ComboBoxItem Content="{Binding all}"/>
+      <ComboBoxItem Content="Privacy"/>
+      <ComboBoxItem Content="Fixer"/>
+      <ComboBoxItem Content="Performance"/>
+      <ComboBoxItem Content="Personalization"/>
+      <ComboBoxItem Content="Power"/>
+      <ComboBoxItem Content="Protection"/>
+      <ComboBoxItem Content="Classic"/>
+
   </ComboBox>
-<!--End Catagory-->
+<!--End TwaeksCategory-->
